--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,27 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.7'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id "org.sonarqube" version "3.4.0.2513"
+	id 'jacoco'
+}
+
+def sonarqubeProperties = new Properties()
+sonarqubeProperties.load(new FileInputStream(rootProject.file("sonarqube.properties")))
+
+jacocoTestReport {
+
+	dependsOn tasks.test
+
+	reports {
+
+		xml.enabled(true)
+
+		html.enabled(true)
+
+		xml.destination(new File("build/reports/jacoco.xml"))
+
+	}
+
 }
 
 group = 'com.example'
@@ -30,12 +51,11 @@ dependencies {
 	implementation 'org.apache.httpcomponents:httpclient'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
 	compileOnly 'org.projectlombok:lombok'
-	testCompileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
-	testAnnotationProcessor 'org.projectlombok:lombok'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
@@ -43,6 +63,23 @@ dependencies {
 
 }
 
+sonarqube {
+	properties {
+		property "sonar.host.url", sonarqubeProperties.getProperty('host.url')
+		property "sonar.projectKey", sonarqubeProperties.getProperty('projectKey')
+		property "sonar.login", sonarqubeProperties.getProperty('login')
+		property "sonar.coverage.jacoco.xmlReportPaths", sonarqubeProperties
+				.getProperty('coverage.jacoco.xmlReportPaths')
+		property "sonar.language", sonarqubeProperties.getProperty('language')
+		property "sonar.sourceEncoding", sonarqubeProperties.getProperty('sourceEncoding')
+		property "sonar.sources", sonarqubeProperties.getProperty('sources')
+		property "sonar.tests", sonarqubeProperties.getProperty('tests')
+		property "sonar.java.binaries", sonarqubeProperties.getProperty('java.binaries')
+		property "sonar.exclusions", sonarqubeProperties.getProperty('exclusions')
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy 'jacocoTestReport'
 }
